Codec_4/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Codec_4_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java:44: error: cannot find symbol
      String string0 = base64_0.encodeToString((byte[]) null);
                               ^
  symbol:   method encodeToString(byte[])
  location: variable base64_0 of type Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java:52: error: cannot find symbol
      String string0 = Base64.encodeBase64String(byteArray0);
                             ^
  symbol:   method encodeBase64String(byte[])
  location: class Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java:58: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("AAAAAAAAAAAAAAAAAAAAAAAAAAA=\r\n");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java:65: error: cannot find symbol
      String string0 = Base64.encodeBase64URLSafeString(byteArray0);
                             ^
  symbol:   method encodeBase64URLSafeString(byte[])
  location: class Base64
Note: /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/3/org/apache/commons/codec/binary/Base64_ESTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
